--- a/style.css
+++ b/style.css
@@ -43,12 +43,16 @@ body{
     box-shadow: 0px 0px 30px rgb(0, 148, 254);
 }
 .high{
-    position: absolute;
-    top: 5px;
+    /* position: absolute; */
+    /* top: 5px; */
     font-size: 20px;
 }
 .startbtn{
     display: none;
+}
+.extra{
+    /* text-align: center; */
+    margin: auto;
 }
 @media (max-width: 480px) {
     
@@ -79,16 +83,17 @@ body{
         display: flex;
     }
     .high{
-        left: 100px;
+        /* left: 100px; */
         top: 415px;
     }
     .startbtn{
-        display: block;
-        position: absolute;
-        top: 370px;
-        left: 120px;
+        display: inline-block;
+        /* position: absolute; */
+        /* top: 370px; */
+        /* left: 120px; */
         padding: 7px;
         border-radius: 15px;
         border: 2px solid ;
+        margin: 20px;
     }
 }
